--- a/sdi2-38/WebContent/snippets/pie-casa.xhtml
+++ b/sdi2-38/WebContent/snippets/pie-casa.xhtml
@@ -3,9 +3,11 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
+	
 	<h:form id="form-pie">
 		<p:separator />
-		<h:commandLink value="#{msgs.enlaceCasa}" action="/index.xhtml">
+		<h:commandLink value="Volver a la página principal"
+			action="/principalRegistrado.xhtml">
 		</h:commandLink>
 	</h:form>
 </ui:composition>
