--- a/sdi2-38/WebContent/login.xhtml
+++ b/sdi2-38/WebContent/login.xhtml
@@ -2,46 +2,54 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">#{msgs.login_form_title}</ui:define>
 
 	<ui:define name="cuerpo">
 		<div>
-		<form action="validarse" method="post">
-			<center>
-				<h1>Inicie sesión</h1>
-			</center>
-			<hr>
-			<br>
-			<table align="center">
-				<tr>
-					<td align="right">Su identificador de usuario</td>
-					<td><input type="text" name="nombreUsuario" align="left"
-						size="15"></td>
-				</tr>
-				<tr>
-					<td align="right">Su contraseña</td>
-					<td><input id="etPasswd" type="password"
-						name="passwordUsuario" align="left" size="15"></td>
-				</tr>
-				<tr>
-					<td><input type="submit" value="Enviar" /></td>
-				</tr>
-			</table>
-			<ul>
-				<li class="dosLeft"><a id="listarViajes" href="listarViajes">
-					Lista de viajes</a>
-				</li>
-				<li class="dosRight"><a id="registrarse" href="abrirRegistro">
-					Registrarse</a>
-				</li>
-			</ul>
-		</form>
-		<hr>
-		<br>
-		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
-	</div>
+			<h:form action="validarse" method="post">
+				<center>
+					<h1>#{msgs.login_title}</h1>
+				</center>
+				<hr/>
+				<br/>
+				<table>
+					<tr>
+						<td>#{msgs.login_id_user}</td>
+						<td>
+							<input type="text" name="nombreUsuario"
+							size="15" />
+						</td>
+					</tr>
+					<tr>
+						<td>#{msgs.login_password}</td>
+						<td>
+							<input id="etPasswd" type="password"
+							name="passwordUsuario" size="15" />
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<input type="submit" value="#{msgs.send}"/>
+						</td>
+					</tr>
+				</table>
+				<ul>
+					<li class="dosLeft">
+						<a id="listarViajes" href="listarViajes">
+							#{msgs.trip_list}</a>
+					</li>
+					<li class="dosRight">
+						<a id="registrarse" href="abrirRegistro">
+							#{msgs.login_new_user}</a>
+					</li>
+				</ul>
+			</h:form>
+			<hr/>
+			<br/>
+		</div>
 	</ui:define>
 
 	<ui:define name="pie">
