--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -2,10 +2,11 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">
-      ShareMyTrip - Listado de viajes
+      #{msgs.list_trip_title}
     </ui:define>
 
 	<ui:define name="cuerpo">
@@ -42,7 +43,6 @@
 				</table>
 			</c:otherwise>
 		</c:choose>
-		<a href="irAInicio">Cancelar</a>
 		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
 	</div>
 	</ui:define>
