--- a/sdi2-38/WebContent/snippets/menu-sinopciones.xhtml
+++ b/sdi2-38/WebContent/snippets/menu-sinopciones.xhtml
@@ -6,9 +6,9 @@
 	<p:menubar id="mimenu">
 		<p:submenu style="float:right" label="#{msgs.textoIdioma}"
 			icon="ui-icon-document">
-			<p:menuitem id="linkespa" value="#{msgs.enlaceIdiomaES}"
+			<p:menuitem id="linkespa" value="#{msgs.enlace_idiomaES}"
 				actionListener="#{settings.setSpanish}" update="@all" />
-			<p:menuitem id="linkingles" value="#{msgs.enlaceIdiomaEN}"
+			<p:menuitem id="linkingles" value="#{msgs.enlace_idiomaEN}"
 				actionListener="#{settings.setEnglish}" update="@all" />
 		</p:submenu>
 	</p:menubar>
