--- a/sdi2-38/WebContent/snippets/pie-casa.xhtml
+++ b/sdi2-38/WebContent/snippets/pie-casa.xhtml
@@ -6,7 +6,7 @@
 	
 	<h:form id="form-pie">
 		<p:separator />
-		<h:commandLink value="#{msgs.enlaceCasa}"
+		<h:commandLink value="#{msgs.enlace_casa}"
 			action="/principalRegistrado.xhtml">
 		</h:commandLink>
 	</h:form>
