--- a/sdi2-38/WebContent/modificarViaje.xhtml
+++ b/sdi2-38/WebContent/modificarViaje.xhtml
@@ -5,139 +5,139 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<ui:define name="titulo">
-      ShareMyTrip - Registro de viaje
+	<h:outputFormat value="#{msgs.cabecera_rellenable}"> <f:param value="#{msgs.cabecera_modificarViaje}"/></h:outputFormat>
     </ui:define>
 
 	<ui:define name="cuerpo">
 		<form action="guardarViajeModificado?id=${viaje.id}" method="post">
 
 		<center>
-			<h1>Modifique su viaje</h1>
+			<h1>#{msgs.titulo_modifiqueViaje}</h1>
 		</center>
 		<hr>
 		<br>
 		<table align="center">
 			<tr>
-				<td><strong>Datos de salida</strong></td>
+				<td><strong>#{msgs.campo_datosSalida}</strong></td>
 			</tr>
 			<tr>
-				<td align="right">Dirección</td>
+				<td align="right">#{msgs.campo_direccion}</td>
 				<td><input type="text" name="departureAddress" align="left"
 					size="50" value="${viaje.departure.address}"></td>
 			</tr>
 			<tr>
-				<td align="right">Ciudad</td>
+				<td align="right">#{msgs.campo_ciudad}</td>
 				<td><input type="text" name="departureCity" align="left"
 					size="15" value="${viaje.departure.city}"></td>
 			</tr>
 			<tr>
-				<td align="right">Estado</td>
+				<td align="right">#{campo_estado}</td>
 				<td><input type="text" name="departureState" align="left"
 					size="15" value="${viaje.departure.state}"></td>
 			</tr>
 			<tr>
-				<td align="right">País</td>
+				<td align="right">#{msgs.campo_pais}</td>
 				<td><input type="text" name="departureCountry" align="left"
 					size="15" value="${viaje.departure.country}"></td>
 			</tr>
 			<tr>
-				<td align="right">Código postal</td>
+				<td align="right">#{msgs.campo_codigoPostal}</td>
 				<td><input type="text" name="departureCP" align="left"
 					size="15" value="${viaje.departure.zipCode}"></td>
 			</tr>
 			<tr>
-				<td align="right">Latitud</td>
+				<td align="right">#{msgs.campo_latitud}</td>
 				<td><input type="text" name="departureLatitude" align="left"
 					size="15" value="${viaje.departure.waypoint.lat}"></td>
 			</tr>
 			<tr>
-				<td align="right">Longitud</td>
+				<td align="right">#{msgs.campo_longitud}</td>
 				<td><input type="text" name="departureLongitud" align="left"
 					size="15" value="${viaje.departure.waypoint.lon}"></td>
 			</tr>
 			<tr>
-				<td align="right">Fecha (dd/mm/yyyy)</td>
+				<td align="right">#{msgs.campo_fechaConFormato}</td>
 				<td><input type="text" name="departureDate" align="left"
 					size="10"></td>
 			</tr>
 			<tr>
-				<td align="right">Hora (hh:mm)</td>
+				<td align="right">#{msgs.campo_horaConFormato}</td>
 				<td><input type="text" name="departureHour" align="left"
 					size="5"></td>
 			</tr>
 			<tr>
-				<td><strong>Datos de llegada</strong></td>
+				<td><strong>#{msgs.campo_datosLlegada}</strong></td>
 			</tr>
 			<tr>
-				<td align="right">Dirección</td>
+				<td align="right">#{msgs.campo_direccion}</td>
 				<td><input type="text" name="arrivalAddress" align="left"
 					size="50" value="${viaje.destination.address}"></td>
 			</tr>
 			<tr>
-				<td align="right">Ciudad</td>
+				<td align="right">#{msgs.campo_ciudad}</td>
 				<td><input type="text" name="arrivalCity" align="left"
 					size="15" value="${viaje.destination.city}"></td>
 			</tr>
 			<tr>
-				<td align="right">Estado</td>
+				<td align="right">#{campo_estado}</td>
 				<td><input type="text" name="arrivalState" align="left"
 					size="15" value="${viaje.destination.state}"></td>
 			</tr>
 			<tr>
-				<td align="right">País</td>
+				<td align="right">#{msgs.campo_pais}</td>
 				<td><input type="text" name="arrivalCountry" align="left"
 					size="15" value="${viaje.destination.country}"></td>
 			</tr>
 			<tr>
-				<td align="right">Código postal</td>
+				<td align="right">#{msgs.campo_codigoPostal}</td>
 				<td><input type="text" name="arrivalCP" align="left" size="15"
 					value="${viaje.destination.zipCode}"></td>
 			</tr>
 			<tr>
-				<td align="right">Latitud</td>
+				<td align="right">#{msgs.campo_latitud}</td>
 				<td><input type="text" name="arrivalLatitude" align="left"
 					size="15" value="${viaje.destination.waypoint.lat}"></td>
 			</tr>
 			<tr>
-				<td align="right">Longitud</td>
+				<td align="right">#{msgs.campo_longitud}</td>
 				<td><input type="text" name="arrivalLongitud" align="left"
 					size="15" value="${viaje.destination.waypoint.lon}"></td>
 			</tr>
 			<tr>
-				<td align="right">Fecha (dd/mm/yyyy)</td>
+				<td align="right">#{msgs.campo_fechaConFormato}</td>
 				<td><input type="text" name="arrivalDate" align="left"
 					size="10"></td>
 			</tr>
 			<tr>
-				<td align="right">Hora (hh:mm)</td>
+				<td align="right">#{msgs.campo_horaConFormato}</td>
 				<td><input type="text" name="arrivalHour" align="left" size="5"></td>
 			</tr>
 			<tr>
-				<td><strong>Datos generales</strong></td>
+				<td><strong>#{msgs.campos_datosGenerales}</strong></td>
 			</tr>
 			<tr>
-				<td align="right">Fecha cierre (dd/mm/yyyy)</td>
+				<td align="right">#{msgs.campo_fechaCierreConFormato}</td>
 				<td><input type="text" name="closingDate" align="left"
 					size="10"></td>
 			</tr>
 			<tr>
-				<td align="right">Hora cierre (hh:mm)</td>
+				<td align="right">#{msgs.campo_horaCierreConFormato}</td>
 				<td>
 					<input type="text" name="closingHour" align="left" 
 					size="5"></td>
 			</tr>
 			<tr>
-				<td align="right">Pasajeros máximos</td>
+				<td align="right">#{msgs.campo_pasajerosMaximos}</td>
 				<td><input type="text" name="maxPas" align="left" size="2"
 					value="${viaje.maxPax}"></td>
 			</tr>
 			<tr>
-				<td align="right">Precio estimado</td>
+				<td align="right">#{msgs.campo_precioEstimado}</td>
 				<td><input type="text" name="estimatedCost" align="left"
 					size="7" value="${viaje.estimatedCost}"></td>
 			</tr>
 			<tr>
-				<td align="right">Comentarios</td>
+				<td align="right">#{msgs.campo_comentarios}</td>
 				<td><input type="text" name="comments" align="left" size="30"
 					value="${viaje.comments}"></td>
 			</tr>
@@ -145,7 +145,7 @@
 				<td><input type="submit" value="Enviar" /></td>
 			</tr>
 		</table>
-		<a href="irAInicio">Cancelar</a>
+		<a href="irAInicio">#{msgs.enlace_cancelar}</a>
 		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
 	</form>
 	<hr>
