--- a/sdi2-38/WebContent/registro.xhtml
+++ b/sdi2-38/WebContent/registro.xhtml
@@ -5,46 +5,46 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<ui:define name="titulo">
-      ShareMyTrip - Registro
+      <h:outputFormat value="#{msgs.cabecera_rellenable}"> <f:param value="#{msgs.cabecera_registro}"/></h:outputFormat>
     </ui:define>
 
 	<ui:define name="cuerpo">
 		<form action="registrarse" method="post">
 
 		<center>
-			<h1>Registre una nueva cuenta</h1>
+			<h1>#{msgs.titulo_registreCuenta}</h1>
 		</center>
 		<hr>
 		<br>
 		<table align="center">
 			<tr>
-				<td align="right">Identificador</td>
+				<td align="right">#{msgs.campo_identificador}</td>
 				<td>
 					<input type="text" name="idUsuario" align="left" size="15">
 				</td>
 			</tr>
 			<tr>
-				<td align="right">Nombre</td>
+				<td align="right">#{msgs.campo_nombre}</td>
 				<td><input type="text" name="nombreUsuario" align="left"
 					size="30"></td>
 			</tr>
 			<tr>
-				<td align="right">Apellidos</td>
+				<td align="right">#{msgs.campo_apellidos}</td>
 				<td><input type="text" name="apellidosUsuario" align="left"
 					size="50"></td>
 			</tr>
 			<tr>
-				<td align="right">Email</td>
+				<td align="right">#{msgs.campo_email}</td>
 				<td><input type="text" name="emailUsuario" align="left"
 					size="30"></td>
 			</tr>
 			<tr>
-				<td align="right">Contraseña</td>
+				<td align="right">#{msgs.campo_contraseña}</td>
 				<td><input id="etPasswd" type="password" name="passwordUsuario"
 					align="left" size="15"></td>
 			</tr>
 			<tr>
-				<td align="right">Repita la contraseña</td>
+				<td align="right">#{msgs.campo_repetirContraseña}</td>
 				<td><input id="etPasswd" type="password" name="repetedPassword"
 					align="left" size="15"></td>
 			</tr>
@@ -54,7 +54,7 @@
 		</table>
 		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
 	</form>
-	<a href="login.jsp">Cancelar</a>
+	<a href="login.jsp">#{msgs.enlace_cancelar}</a>
 	<hr>
 	</ui:define>
 
