Eliminadas excepciones extra de persistencia. Comentado contenido innecesario en los templates.

--- a/sdi2-38/WebContent/login.xhtml
+++ b/sdi2-38/WebContent/login.xhtml
@@ -32,7 +32,7 @@
 					</tr>
 					<tr>
 						<td>
-							<input type="submit" value="#{msgs.send}"/>
+							<input type="submit" value="#{msgs.enlace_enviar}"/>
 						</td>
 					</tr>
 				</table>
