Pequeñas modificaciones en los templates

--- a/sdi2-38/WebContent/login.xhtml
+++ b/sdi2-38/WebContent/login.xhtml
@@ -29,7 +29,7 @@
 	</ui:define>
 
 	<ui:define name="pie">
-		<ui:include src="/snippets/pie-casa.xhtml" />
+		<!-- En la pantalla de login no se deberia mostrar link para ir a la pagina principal // <ui:include src="/snippets/pie-casa.xhtml" /> -->
 	</ui:define>
 
 </ui:composition>
