--- a/sdi2-38/WebContent/snippets/menu-idiomas.xhtml
+++ b/sdi2-38/WebContent/snippets/menu-idiomas.xhtml
@@ -4,7 +4,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
 	<p:menubar id="mimenu">
-		<p:submenu style="float:right" label="#{msgs.textoIdioma}"
+		<p:submenu style="float:right" label="#{msgs.menu_Idioma}"
 			icon="ui-icon-document">
 			<p:menuitem id="linkespa" value="#{msgs.enlace_idiomaES}"
 				actionListener="#{settings.setSpanish}" update="@all" />
