--- a/sdi2-38/WebContent/comentarViaje.xhtml
+++ b/sdi2-38/WebContent/comentarViaje.xhtml
@@ -2,7 +2,8 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">
 	<h:outputFormat value="#{msgs.cabecera_rellenable}"> <f:param value="#{msgs.cabecera_comentarViaje}"/></h:outputFormat>
