--- a/sdi2-38/WebContent/login.xhtml
+++ b/sdi2-38/WebContent/login.xhtml
@@ -3,7 +3,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	template="/templates/template-inicio.xhtml">
+	template="/templates/template-inicio.xhtml"
+	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">#{msgs.cabecera_login}</ui:define>
 
