Internacionalizada oagina de error

--- a/sdi2-38/WebContent/error.xhtml
+++ b/sdi2-38/WebContent/error.xhtml
@@ -12,9 +12,7 @@
 	<ui:define name="cuerpo">
 		<h:form id="form-principal">
 		<p:panel header="#{msgs.tituloOperacionError}">
-		 <h1>#{msgs.mensajeError1}</h1>
-		 <p>#{msgs.mensajeError2}</p>
-		 <p>#{msgs.mensajeError3}</p>
+		 <p>#{msgs.mensajeError}</p>
 		 </p:panel>
 		 </h:form>
 	</ui:define>
