--- a/sdi2-38/WebContent/principalRegistrado.xhtml
+++ b/sdi2-38/WebContent/principalRegistrado.xhtml
@@ -10,19 +10,20 @@
     </ui:define>
 
 	<ui:define name="cuerpo">
-		<div>
+		<h:form  method="post">
 		<center>
-			<h1><h:outputFormat value="#{msgs.titulo_bienvenido}"> <f:param value="${user.name}"/></h:outputFormat></h1>
+			<h1><h:outputFormat value="#{msgs.titulo_bienvenido}"> <f:param value="#{sesion.usuario.name}"/></h:outputFormat></h1>
 		</center>
 		<ul>
-			<li><a href="cerrarSesion">#{msgs.enlace_cerrarSesion}</a></li>
-			<li><a id="listaViaje" href="listarViajes">#{msgs.enlace_listarViajes}</a></li>
-			<li><a id="registrarViaje" href="registrarViaje">#{msgs.enlace_registrarViaje}</a></li>
-			<li><a href="misViajes">#{msgs.enlace_misViajes}</a></li>
-			<li><a href="viajesAComentar">#{msgs.enlace_comentarViaje}</a></li>
+			<li><h:commandLink value="#{msgs.enlace_cerrarSesion}" action="#{sesion.cerrar}"/></li>
+			<li><h:commandLink value="#{msgs.enlace_listarViajes}" action="#{tripsController.listado}"/></li>
+			<!-- TODO: IMPLEMENTAR -->
+			<li><h:commandLink value="#{msgs.enlace_registrarViaje}" action="Algo que me pase a registroViaje.xhtml" actionListener="Algo que inicialice el trip en tripsController para rellenarlo posteriormente (a no ser que se haga en el action)"/></li>
+			<li><h:commandLink value="#{msgs.enlace_misViajes}" action="Algo que me pase a viajesInvolucrado.xhtml" actionListener="Algo que prepare la variable en la que se almacenarán los viajes del usuario (a no ser que se haga en el action)"/></li>
+			<li><h:commandLink value="#{msgs.enlace_comentarViaje}" action="Algo que me pase a listaComentables.xhtml" actionListener="Algo que prepare la variable en la que se almacenarán los viajes a comentar (a no ser que se haga en el action)"/></li>
 		</ul>
+		</h:form>
 		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
-	</div>
 	</ui:define>
 
 	<ui:define name="pie">
