--- a/sdi2-38/WebContent/error.xhtml
+++ b/sdi2-38/WebContent/error.xhtml
@@ -5,9 +5,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/templates/template-general.xhtml">
 
-	<ui:define name="titulo">
-      #{msgs.tituloHead}
-    </ui:define>
+	<ui:define name="titulo">#{msgs.cabecera_error}</ui:define>
 
 	<ui:define name="cuerpo">
 		<h:form id="form-principal">
@@ -15,10 +13,6 @@
 		 <p>#{msgs.mensajeError}</p>
 		 </p:panel>
 		 </h:form>
-	</ui:define>
-
-	<ui:define name="pie">
-		<ui:include src="/snippets/pie-casa.xhtml" />
 	</ui:define>
 
 </ui:composition>
