--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -15,7 +15,8 @@
 		<h:form>
 			<p:panel>
 				<p:dataTable id="tablaViajes" var="valtrip"
-					value="#{tripsController.trips}" border="10">
+					value="#{tripsController.trips}" border="10"
+					emptyMessage="#{msgs.mensaje_sinViajesDisponibles}">
 					<p:column id="idViaje">
 						<f:facet name="header">#{msgs.campo_idViaje}</f:facet>
 						#{valtrip.id}
