Menu para todos los roles, cambio el nombre a menu.xml

--- a/sdi2-38/WebContent/modificar.xhtml
+++ b/sdi2-38/WebContent/modificar.xhtml
@@ -60,4 +60,8 @@
 	</form>
 	</ui:define>
 
+	<ui:define name="pie">
+		<ui:include src="/snippets/pie-casa.xhtml" />
+	</ui:define>
+
 </ui:composition>
