--- a/sdi2-38/WebContent/comentarViaje.xhtml
+++ b/sdi2-38/WebContent/comentarViaje.xhtml
@@ -51,4 +51,8 @@
 	</form>
 	</ui:define>
 
+	<ui:define name="pie">
+		<ui:include src="/snippets/pie-casa.xhtml" />
+	</ui:define>
+
 </ui:composition>
