--- a/sdi2-38/WebContent/infoUsuario.xhtml
+++ b/sdi2-38/WebContent/infoUsuario.xhtml
@@ -29,4 +29,8 @@
 	</div>
 	</ui:define>
 
+	<ui:define name="pie">
+		<ui:include src="/snippets/pie-casa.xhtml" />
+	</ui:define>
+
 </ui:composition>
