--- a/sdi2-38/WebContent/modificarViaje.xhtml
+++ b/sdi2-38/WebContent/modificarViaje.xhtml
@@ -153,4 +153,8 @@
 	<br>
 	</ui:define>
 
+	<ui:define name="pie">
+		<ui:include src="/snippets/pie-casa.xhtml" />
+	</ui:define>
+
 </ui:composition>
