Implementado cierre de sesión. Re-realizados cambios perdidos :'(

--- a/sdi2-38/WebContent/registro.xhtml
+++ b/sdi2-38/WebContent/registro.xhtml
@@ -89,8 +89,7 @@
 			</h:panelGrid>
 		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
 		
-		<!-- TODO Terminar implementacion -->
-	<h:commandLink value="#{msgs.enlace_cancelar}" action="Algo que me devuelva a login.xhtml" />
+	<h:commandLink value="#{msgs.enlace_cancelar}" action="cerrar" />
 	</form>
 	</ui:define>
 
