--- a/sdi2-38/WebContent/viajesInvolucrado.xhtml
+++ b/sdi2-38/WebContent/viajesInvolucrado.xhtml
@@ -6,107 +6,98 @@
 	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">
-      <h:outputFormat value="#{msgs.cabecera_rellenable}"> <f:param value="#{msgs.cabecera_viajesInvolucrado}"/></h:outputFormat>
-    </ui:define>
+		<h:outputFormat value="#{msgs.cabecera_rellenable}">
+			<f:param value="#{msgs.cabecera_viajesInvolucrado}" />
+		</h:outputFormat>
+	</ui:define>
 
 	<ui:define name="cuerpo">
 		<div>
-		<table border="1" align="center">
-			<tr>
-				<th>#{msgs.campo_idViaje}</th>
-				<th>#{msgs.campo_estadoViaje}</th>
-				<th>#{msgs.campo_fechaCierre}</th>
-				<th>#{msgs.campo_fechaSalida}</th>
-				<th>#{msgs.campo_fechaLlegada}</th>
-				<th>#{msgs.campo_estado}</th>
-				<th>#{msgs.campo_opciones}</th>
-			</tr>
+			<table border="1" align="center">
+				<tr>
+					<th>#{msgs.campo_idViaje}</th>
+					<th>#{msgs.campo_estadoViaje}</th>
+					<th>#{msgs.campo_fechaCierre}</th>
+					<th>#{msgs.campo_fechaSalida}</th>
+					<th>#{msgs.campo_fechaLlegada}</th>
+					<th>#{msgs.campo_estado}</th>
+					<th>#{msgs.campo_opciones}</th>
+				</tr>
 
-			<c:forEach var="entry" items="${promocionados}" varStatus="i">
-				<tr id="item_${i.index}">
-					<td>
-						<a href="mostrarViaje?id=${entry.id}">${entry.id}</a>
-					</td>
-					<td>${entry.status}</td>
-					<td>${entry.closingDate}</td>
-					<td>${entry.departureDate}</td>
-					<td>${entry.arrivalDate}</td>
-					<td>#{msgs.campo_promotor}</td>
-					<td>
-						<a href="verSolicitantes?id=${entry.id}">#{msgs.enlace_verSolicitantes}</a><br> 
-						<a href="cancelarViaje?id=${entry.id}">#{msgs.enlace_cancelarViaje}</a><br> 
+				<c:forEach var="entry" items="${promocionados}" varStatus="i">
+					<tr id="item_${i.index}">
+						<td><a href="mostrarViaje?id=${entry.id}">${entry.id}</a></td>
+						<td>${entry.status}</td>
+						<td>${entry.closingDate}</td>
+						<td>${entry.departureDate}</td>
+						<td>${entry.arrivalDate}</td>
+						<td>#{msgs.campo_promotor}</td>
+						<td><a href="verSolicitantes?id=${entry.id}">#{msgs.enlace_verSolicitantes}</a><br>
+						<a href="cancelarViaje?id=${entry.id}">#{msgs.enlace_cancelarViaje}</a><br>
 						<a href="modificarViaje?id=${entry.id}">#{msgs.enlace_modificarViaje}</a>
-					</td>
-				</tr>
-			</c:forEach>
+						</td>
+					</tr>
+				</c:forEach>
 
-			<c:forEach var="entry" items="${participante}" varStatus="i">
-				<tr id="item_${i.index}">
-					<td>
-						<a href="mostrarViaje?id=${entry.id}">${entry.id}</a>
-					</td>
-					<td>${entry.status}</td>
-					<td>${entry.closingDate}</td>
-					<td>${entry.departureDate}</td>
-					<td>${entry.arrivalDate}</td>
-					<td>#{msgs.campo_aceptado}</td>
-					<td><a
-						href="cancelarSolicitud?user=${user.id}
+				<c:forEach var="entry" items="${participante}" varStatus="i">
+					<tr id="item_${i.index}">
+						<td><a href="mostrarViaje?id=${entry.id}">${entry.id}</a></td>
+						<td>${entry.status}</td>
+						<td>${entry.closingDate}</td>
+						<td>${entry.departureDate}</td>
+						<td>${entry.arrivalDate}</td>
+						<td>#{msgs.campo_aceptado}</td>
+						<td><a
+							href="cancelarSolicitud?user=${user.id}
 								&viaje=${entry.id}">#{msgs.enlace_cancelarSolicitud}</a></td>
-				</tr>
-			</c:forEach>
+					</tr>
+				</c:forEach>
 
-			<c:forEach var="entry" items="${enEspera}" varStatus="i">
-				<tr id="item_${i.index}">
-					<td>
-						<a href="mostrarViaje?id=${entry.id}">${entry.id}</a>
-					</td>
-					<td>${entry.status}</td>
-					<td>${entry.closingDate}</td>
-					<td>${entry.departureDate}</td>
-					<td>${entry.arrivalDate}</td>
-					<td>#{msgs.campo_pendiente}</td>
-					<td><a
-						href="cancelarSolicitud?user=${user.id}
+				<c:forEach var="entry" items="${enEspera}" varStatus="i">
+					<tr id="item_${i.index}">
+						<td><a href="mostrarViaje?id=${entry.id}">${entry.id}</a></td>
+						<td>${entry.status}</td>
+						<td>${entry.closingDate}</td>
+						<td>${entry.departureDate}</td>
+						<td>${entry.arrivalDate}</td>
+						<td>#{msgs.campo_pendiente}</td>
+						<td><a
+							href="cancelarSolicitud?user=${user.id}
 								&viaje=${entry.id}">#{msgs.enlace_cancelarSolicitud}</a></td>
-				</tr>
-			</c:forEach>
+					</tr>
+				</c:forEach>
 
-			<c:forEach var="entry" items="${excluido}" varStatus="i">
-				<tr id="item_${i.index}">
-					<td>
-						<a href="mostrarViaje?id=${entry.id}">${entry.id}</a>
-					</td>
-					<td>${entry.status}</td>
-					<td>${entry.closingDate}</td>
-					<td>${entry.departureDate}</td>
-					<td>${entry.arrivalDate}</td>
-					<td>#{msgs.campo_excluido}</td>
-					<td><a
-						href="cancelarSolicitud?user=${user.id}
+				<c:forEach var="entry" items="${excluido}" varStatus="i">
+					<tr id="item_${i.index}">
+						<td><a href="mostrarViaje?id=${entry.id}">${entry.id}</a></td>
+						<td>${entry.status}</td>
+						<td>${entry.closingDate}</td>
+						<td>${entry.departureDate}</td>
+						<td>${entry.arrivalDate}</td>
+						<td>#{msgs.campo_excluido}</td>
+						<td><a
+							href="cancelarSolicitud?user=${user.id}
 								&viaje=${entry.id}">#{msgs.enlace_cancelarSolicitud}</a></td>
-				</tr>
-			</c:forEach>
+					</tr>
+				</c:forEach>
 
-			<c:forEach var="entry" items="${sinPlaza}" varStatus="i">
-				<tr id="item_${i.index}">
-					<td>
-						<a href="mostrarViaje?id=${entry.id}">${entry.id}</a>
-					</td>
-					<td>${entry.status}</td>
-					<td>${entry.closingDate}</td>
-					<td>${entry.departureDate}</td>
-					<td>${entry.arrivalDate}</td>
-					<td>#{msgs.campo_sinPlaza}</td>
-					<td><a
-						href="cancelarSolicitud?user=${user.id}
+				<c:forEach var="entry" items="${sinPlaza}" varStatus="i">
+					<tr id="item_${i.index}">
+						<td><a href="mostrarViaje?id=${entry.id}">${entry.id}</a></td>
+						<td>${entry.status}</td>
+						<td>${entry.closingDate}</td>
+						<td>${entry.departureDate}</td>
+						<td>${entry.arrivalDate}</td>
+						<td>#{msgs.campo_sinPlaza}</td>
+						<td><a
+							href="cancelarSolicitud?user=${user.id}
 								&viaje=${entry.id}">#{msgs.enlace_cancelarSolicitud}</a></td>
-				</tr>
-			</c:forEach>
-		</table>
-		<a href="irAInicio">#{msgs.enlace_cancelar}</a>
-		<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
-	</div>
+					</tr>
+				</c:forEach>
+			</table>
+			<a href="irAInicio">#{msgs.enlace_cancelar}</a>
+			<!-- <ui:include src="/snippets/muestraMensaje.xhtml" /> -->
+		</div>
 	</ui:define>
 
 	<ui:define name="pie">
