--- a/sdi2-38/WebContent/error.xhtml
+++ b/sdi2-38/WebContent/error.xhtml
@@ -6,7 +6,7 @@
 	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">
-      #{msgs.tituloHead}
+      #{msgs.tituloOperacionError}
     </ui:define>
 
 	<ui:define name="cuerpo">
@@ -15,10 +15,6 @@
 		 <p>#{msgs.mensajeError}</p>
 		 </p:panel>
 		 </h:form>
-	</ui:define>
-
-	<ui:define name="pie">
-		<ui:include src="/snippets/pie-casa.xhtml" />
 	</ui:define>
 
 </ui:composition>
