--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -35,13 +35,15 @@
 					</p:column>
 					<p:column rendered="#{sesion.usuario!=null}">
 						<f:facet name="header">#{msgs.enlace_solicitar}</f:facet>
-						<p:commandLink id="solicitarlink" action="#{applicationsController.salva}" type="submit"
+						<p:commandLink id="solicitarlink" action="#{applicationsController.salva(sesion.usuario.id, valtrip.id)}" type="submit"
 							value="#{msgs.enlace_solicitar}">
 						</p:commandLink>
 					</p:column>
 				</p:dataTable>
 			</p:panel>
+			<h:message for="solicitarLink"/>
 		</h:form>
+		
 	</ui:define>
 
 </ui:composition>
