--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -41,7 +41,7 @@
 					</p:column>
 				</p:dataTable>
 			</p:panel>
-			<h:message for="solicitarLink"/>
+			<h:messages/>
 		</h:form>
 		
 	</ui:define>
