--- a/sdi2-38/WebContent/registro.xhtml
+++ b/sdi2-38/WebContent/registro.xhtml
@@ -13,6 +13,7 @@
 
 	<ui:define name="cuerpo">
 		<h:form action="registrarse" method="post">
+			<h:messages style="color:red;margin:8px;"/>
 			<center>
 				<h1>#{msgs.titulo_registreCuenta}</h1>
 			</center>
