Vista de viajes involucrados terminada

--- a/sdi2-38/WebContent/login.xhtml
+++ b/sdi2-38/WebContent/login.xhtml
@@ -10,7 +10,7 @@
 	<ui:define name="cuerpo">
 		<div>
 			<h:form  method="post">
-				<h:messages style="color:red;margin:8px;/>
+				<h:messages style="color:red;margin:8px;"/>
 				<center>
 					<h1>#{msgs.titulo_inicieSesion}</h1>
 				</center>
