--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -35,15 +35,23 @@
 					</p:column>
 					<p:column rendered="#{sesion.usuario!=null}">
 						<f:facet name="header">#{msgs.enlace_solicitar}</f:facet>
-						<p:commandLink id="solicitarlink" action="#{applicationsController.salva(sesion.usuario.id, valtrip.id)}" type="submit"
-							value="#{msgs.enlace_solicitar}">
+						<p:commandLink id="solicitarlink"
+							action="#{applicationsController.salva(sesion.usuario.id, valtrip.id)}"
+							type="submit" value="#{msgs.enlace_solicitar}">
+						</p:commandLink>
+					</p:column>
+					<p:column rendered="#{sesion.usuario!=null}">
+						<f:facet name="header">#{msgs.enlace_detalles}</f:facet>
+						<p:commandLink id="verDetalles_#{valtrip.id}"
+							action="#{seatsController.participantes(valtrip.id)}"
+							type="submit" value="#{msgs.ver_participantes}">
 						</p:commandLink>
 					</p:column>
 				</p:dataTable>
-				<h:messages/>
-			</p:panel>			
+				<h:messages />
+			</p:panel>
 		</h:form>
-		
+
 	</ui:define>
 
 </ui:composition>
